test/programs/invalid_programs/variables/void_assignment.jm
#!TypeError

def foo()
  puts("foo")
end

a = foo()
